# tbin

./: CMakeLists.txt  Makefile  README.md  install.sh  run.sh
src/: argparse.c  argparse.h  exit.c  exit.h  main.c  translate.c  translate.h
